metallb/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: default
  name: leapfrogai
  namespace: istio-system
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 30248
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 32386
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30535
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: tenant-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
