metallb/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: leapfrogai
  namespace: istio-system
spec:
  selector:
    app: tenant-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 8080
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: tenant-cert
      minProtocolVersion: TLSV1_3
      mode: SIMPLE
